[summary] Add section on Additional Features

--- a/summary/summary.tex
+++ b/summary/summary.tex
@@ -447,4 +447,21 @@ The API distinguishes between the 1D, 2D and the 3D version by a suffix to the r
     \end{tabular}
 \end{table}
 
+\section{Additional features}
+
+There are two things Tausch is able to do that don't really fit into any one of the previous sections:
+\begin{enumerate}
+    \item Combine multiple buffers into one message. If there are multiple buffers covering the same domain that all need to exchange halo data, then Tausch can combine them all into one message instead of having to do a seperate halo exchange for each individual buffer. It does so by assigning buffer id's to the buffers in a similar fashion as the halo id's. That means that the first buffer has an index of 0, the second one an index of 1, etc. The difference to the halo id is, though, that Tausch doesn't care if the order is kept the same at each halo exchange. The only thing Tausch will make sure is that halo data arrives with the same buffer id as it was sent off.
+    \item Instead of having multiple buffers cover the same domain, it is also possible to have one buffer store multiple values for each point in the discretisation (e.g., for storing stencil data). Tausch can be told for each buffer how many values it stores for each point. If \emph{NULL} is specified (or rather \emph{nullptr}) then Tausch assumes that each buffer stores exactly one value for each point in the discretisation.
+\end{enumerate}
+
+\section{Next steps in the development}
+
+\begin{itemize}
+    \item Tausch currently is very well optimised in terms of performance only for two-dimensional CPU/CPU communication. The first next step is to perform similar optimisations for all the other types of communications and dimensions.
+    \item GPU/GPU communication is currently only implemented in the two-dimensional code, still missing from one- and three-dimensional versions.
+    \item Even though Tausch generally outperforms MSG, it does so (according to some testing) only in 3 out of 4 cases. We would like it to perform better in all cases though.
+\end{itemize}
+
+
 \end{document}
