[summary] Add more info to l/r headers

--- a/summary/summary.tex
+++ b/summary/summary.tex
@@ -12,8 +12,8 @@
 %% The left and right header
 \usepackage{fancyhdr}
 \pagestyle{fancy}
-\rhead{\bfseries Tausch}
-\lhead{}
+\rhead{\bfseries Tausch - A halo exchange library}
+\lhead{Lukas Spies}
 
 \usepackage{tikz}
 
@@ -56,6 +56,8 @@
 \begin{center}\Huge\bfseries
     Tausch
 \end{center}
+
+\vspace{4mm}
 
 
 Tausch (pronounced: [ta\textupsilon\textesh]) is a halo exchange library that provides a uniform interface for halo exchanges irrespective of the compute units involved in the data transfer.
